--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-time-picker": "^4.0.3",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "dotenv": "^16.4.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
@@ -24,6 +25,7 @@
     "next-auth": "^4.24.10",
     "react": "^18",
     "react-calendar": "^5.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^7.5.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
