--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
     "dotenv": "^16.4.5",
+    "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
@@ -33,7 +34,8 @@
     "react-icons": "^5.3.0",
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.0.1",
-    "react-time-picker": "^7.0.0"
+    "react-time-picker": "^7.0.0",
+    "recharts": "^2.15.2"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
