--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-time-picker": "^4.0.3",
     "axios": "^1.7.7",
     "chart.js": "^4.4.7",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^12.6.3",
     "js-cookie": "^3.0.5",
@@ -22,8 +23,10 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
+    "multer": "^1.4.5-lts.2",
     "next": "14.1.3",
     "next-auth": "^4.24.10",
+    "pdf-parse": "^1.1.1",
     "react": "^18",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.2.0",
