--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.5",
     "framer-motion": "^12.6.3",
+    "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.525.0",
     "multer": "^1.4.5-lts.2",
     "next": "14.1.3",
     "next-auth": "^4.24.10",
@@ -38,6 +40,7 @@
     "react-multi-date-picker": "^4.5.2",
     "react-router-dom": "^7.0.1",
     "react-time-picker": "^7.0.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
