--- a/package.json
+++ b/package.json
@@ -10,13 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "@types/react-datepicker": "^6.2.0",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/react-time-picker": "^4.0.3",
-    "axios": "^1.7.7",
+    "axios": "^1.13.2",
     "chart.js": "^4.4.7",
     "date-fns-tz": "^3.2.0",
-    "dotenv": "^16.4.5",
     "framer-motion": "^12.6.3",
     "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
@@ -38,17 +34,19 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-multi-date-picker": "^4.5.2",
-    "react-router-dom": "^7.0.1",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
     "@types/js-cookie": "^3.0.6",
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.27",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18",
+    "@types/react-time-picker": "^4.0.3",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.7.3",
     "eslint": "^8",
